--- a/Deployment.yml
+++ b/Deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: test-cont
-        image: mohithdevops/testimage:1
+        image: mohithrr/hotstar6:1
         ports:
         - containerPort: 3000
 ---
